# jamtil

./: Cargo.toml
examples/: sequence_animation.rs
jamtil_macros/: Cargo.toml
jamtil_macros/src/: lerp.rs  lib.rs
src/: animation.rs  lib.rs  sequence.rs  system.rs  tween.rs
