[package]
name = "jamtil"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["jamtil_macros"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
	"bevy_log",
	"bevy_color",
] }
variadics_please = "1.1.0"
jamtil_macros = { path = "jamtil_macros" }
